[gd_scene load_steps=16 format=4 uid="uid://dt6mlxcflcuv0"]

[ext_resource type="PackedScene" uid="uid://kvufpqxm1heu" path="res://Scenes/Parallax/parallax_background.tscn" id="1_5wsvm"]
[ext_resource type="Script" uid="uid://blunsyvh48v0c" path="res://Scripts/UI/main_menu.gd" id="1_o14dv"]
[ext_resource type="Texture2D" uid="uid://debufwksgtsci" path="res://Assets/Player/adventurer-v1.5-Sheet.png" id="2_u7lva"]
[ext_resource type="Theme" uid="uid://b1vagqn5fqjuc" path="res://Scripts/Resources/theme/pause_menu.tres" id="3_u7lva"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_o14dv"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_u7lva"]
load_path = "res://.godot/imported/Mossy - TileSet.png-55b817cdee69fafa7e0c87ac8e70199f.ctex"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mrfpk"]
texture = SubResource("CompressedTexture2D_u7lva")
texture_region_size = Vector2i(512, 512)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 256, 256, 256, 256, -85.3333, -85.3333, -85.3333)
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(256, -85.3333, 256, 256, -256, 256, -256, -85.3333)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 256, -256, 256, -256, -85.3333, 85.3333, -85.3333)
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 256, 85.3333, -85.3333, -85.3333, -85.3333, -85.3333, 256)
3:0/0/terrains_peering_bit/bottom_side = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(256, -256, 256, -85.3333, 256, 85.3333, 85.3333, 85.3333, 85.3333, 256, -85.3333, 256, -256, 256, -256, 85.3333, -256, -85.3333, -256, -256, -85.3333, -256, 85.3333, -256)
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/bottom_side = 0
4:0/0/terrains_peering_bit/bottom_left_corner = 0
4:0/0/terrains_peering_bit/left_side = 0
4:0/0/terrains_peering_bit/top_left_corner = 0
4:0/0/terrains_peering_bit/top_side = 0
4:0/0/terrains_peering_bit/top_right_corner = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(256, 256, 85.3333, 256, -85.3333, 256, -85.3333, 85.3333, -256, 85.3333, -256, -85.3333, -256, -256, -85.3333, -256, 85.3333, -256, 256, -256, 256, -85.3333, 256, 85.3333)
5:0/0/terrains_peering_bit/right_side = 0
5:0/0/terrains_peering_bit/bottom_right_corner = 0
5:0/0/terrains_peering_bit/bottom_side = 0
5:0/0/terrains_peering_bit/left_side = 0
5:0/0/terrains_peering_bit/top_left_corner = 0
5:0/0/terrains_peering_bit/top_side = 0
5:0/0/terrains_peering_bit/top_right_corner = 0
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -85.3333, -85.3333, -256, 85.3333, -256, 85.3333, -85.3333, 256, -85.3333, 256, 85.3333, 256, 256, 85.3333, 256, -85.3333, 256, -256, 256, -256, 85.3333, -256, -85.3333)
6:0/0/terrains_peering_bit/right_side = 0
6:0/0/terrains_peering_bit/bottom_right_corner = 0
6:0/0/terrains_peering_bit/bottom_side = 0
6:0/0/terrains_peering_bit/bottom_left_corner = 0
6:0/0/terrains_peering_bit/left_side = 0
6:0/0/terrains_peering_bit/top_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -256, 256, -256, 256, 256, -85.3333, 256)
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-256, -256, 256, -256, 256, 256, -256, 256)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -256, -256, -256, -256, 256, 85.3333, 256)
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -256, 85.3333, 256, -85.3333, 256, -85.3333, -256)
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/top_side = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-256, -256, -85.3333, -256, 85.3333, -256, 85.3333, -85.3333, 256, -85.3333, 256, 85.3333, 256, 256, 85.3333, 256, -85.3333, 256, -256, 256, -256, 85.3333, -256, -85.3333)
4:1/0/terrains_peering_bit/right_side = 0
4:1/0/terrains_peering_bit/bottom_right_corner = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/bottom_left_corner = 0
4:1/0/terrains_peering_bit/left_side = 0
4:1/0/terrains_peering_bit/top_left_corner = 0
4:1/0/terrains_peering_bit/top_side = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-256, 256, -256, 85.3333, -256, -85.3333, -85.3333, -85.3333, -85.3333, -256, 85.3333, -256, 256, -256, 256, -85.3333, 256, 85.3333, 256, 256, 85.3333, 256, -85.3333, 256)
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/bottom_right_corner = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/bottom_left_corner = 0
5:1/0/terrains_peering_bit/left_side = 0
5:1/0/terrains_peering_bit/top_side = 0
5:1/0/terrains_peering_bit/top_right_corner = 0
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 85.3333, -256, 85.3333, -256, -85.3333, -85.3333, -85.3333, -85.3333, -256, 85.3333, -256, 256, -256, 256, -85.3333, 256, 85.3333, 256, 256, 85.3333, 256, -85.3333, 256)
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/bottom_right_corner = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/left_side = 0
6:1/0/terrains_peering_bit/top_side = 0
6:1/0/terrains_peering_bit/top_right_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -256, 256, -256, 256, 85.3333, -85.3333, 85.3333)
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(256, 85.3333, 256, -256, -256, -256, -256, 85.3333)
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -256, -256, -256, -256, 85.3333, 85.3333, 85.3333)
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -256, 85.3333, 85.3333, -85.3333, 85.3333, -85.3333, -256)
3:2/0/terrains_peering_bit/top_side = 0
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -85.3333, -85.3333, -256, -85.3333, -256, 85.3333, -256, 256, -85.3333, 256, 85.3333, 256, 85.3333, 85.3333, 256, 85.3333, 256, -85.3333)
4:2/0/terrains_peering_bit/right_side = 0
4:2/0/terrains_peering_bit/bottom_side = 0
4:2/0/terrains_peering_bit/bottom_left_corner = 0
4:2/0/terrains_peering_bit/left_side = 0
4:2/0/terrains_peering_bit/top_side = 0
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/terrain = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 85.3333, -85.3333, 256, 85.3333, 256, 85.3333, 85.3333, 256, 85.3333, 256, -85.3333, 256, -256, 85.3333, -256, -85.3333, -256, -85.3333, -85.3333, -256, -85.3333, -256, 85.3333)
5:2/0/terrains_peering_bit/right_side = 0
5:2/0/terrains_peering_bit/bottom_side = 0
5:2/0/terrains_peering_bit/left_side = 0
5:2/0/terrains_peering_bit/top_side = 0
5:2/0/terrains_peering_bit/top_right_corner = 0
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/terrain = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 85.3333, 256, 85.3333, 256, -85.3333, 85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -256, -256, -256, -85.3333, -256, 85.3333, -256, 256, -85.3333, 256, 85.3333, 256)
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/bottom_side = 0
6:2/0/terrains_peering_bit/bottom_left_corner = 0
6:2/0/terrains_peering_bit/left_side = 0
6:2/0/terrains_peering_bit/top_left_corner = 0
6:2/0/terrains_peering_bit/top_side = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(142.222, -85.3333, 142.222, 85.3333, 256, 85.3333, 256, -85.3333)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-256, -85.3333, -256, 85.3333, 256, 85.3333, 256, -85.3333)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-142.222, -85.3333, -142.222, 85.3333, -256, 85.3333, -256, -85.3333)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-142.222, -85.3333, -142.222, 85.3333, 142.222, 85.3333, 142.222, -85.3333)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 85.3333, 256, 85.3333, 256, -85.3333, 85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -256, -256, -256, -85.3333, -256, 85.3333, -85.3333, 85.3333, -85.3333, 256, 85.3333, 256)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -85.3333, -256, -85.3333, -256, 85.3333, -85.3333, 85.3333, -85.3333, 256, 85.3333, 256, 256, 256, 256, 85.3333, 256, -85.3333, 85.3333, -85.3333, 85.3333, -256, -85.3333, -256)
6:3/0 = 0
6:3/0/terrain_set = 0
6:3/0/terrain = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 85.3333, -85.3333, 256, 85.3333, 256, 85.3333, 85.3333, 256, 85.3333, 256, -85.3333, 256, -256, 85.3333, -256, -85.3333, -256, -256, -256, -256, -85.3333, -256, 85.3333)
6:3/0/terrains_peering_bit/right_side = 0
6:3/0/terrains_peering_bit/bottom_side = 0
6:3/0/terrains_peering_bit/left_side = 0
6:3/0/terrains_peering_bit/top_left_corner = 0
6:3/0/terrains_peering_bit/top_side = 0
6:3/0/terrains_peering_bit/top_right_corner = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 85.3333, -85.3333, 256, 85.3333, 256, 85.3333, 85.3333, 256, 85.3333, 256, -85.3333, 256, -256, 85.3333, -256, -85.3333, -256, -85.3333, -85.3333)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 85.3333, 85.3333, 256, -85.3333, 256, -85.3333, 85.3333, -256, 85.3333, -256, -85.3333, -256, -256, -85.3333, -256, 85.3333, -256, 85.3333, -85.3333)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -85.3333, 256, -85.3333, 256, 85.3333, 85.3333, 85.3333, 85.3333, 256, -85.3333, 256, -256, 256, -256, 85.3333, -256, -85.3333, -85.3333, -85.3333)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -85.3333, -256, -85.3333, -256, 85.3333, -85.3333, 85.3333, -85.3333, 256, 85.3333, 256, 256, 256, 256, 85.3333, 256, -85.3333, 85.3333, -85.3333)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 85.3333, -85.3333, 256, 85.3333, 256, 85.3333, 85.3333, 256, 85.3333, 256, -85.3333, -85.3333, -85.3333)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -85.3333, 256, -85.3333, 256, 85.3333, 85.3333, 85.3333, 85.3333, 256, -85.3333, 256, -85.3333, 85.3333, -256, 85.3333, -256, -85.3333)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 85.3333, 85.3333, 256, -85.3333, 256, -85.3333, 85.3333, -256, 85.3333, -256, -85.3333, 85.3333, -85.3333)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -85.3333, -85.3333, -256, 85.3333, -256, 85.3333, -85.3333, 256, -85.3333, 256, 85.3333, 256, 256, 85.3333, 256, -85.3333, 256, -85.3333, 85.3333)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -85.3333, -85.3333, -256, -85.3333, -256, 85.3333, -256, 256, -85.3333, 256, 85.3333, 256, 85.3333, 85.3333)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 85.3333, 256, 85.3333, 256, -85.3333, 85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -256, -256, -256, -85.3333, -256, 85.3333, -85.3333, 85.3333)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 85.3333, -256, 85.3333, -256, -85.3333, -85.3333, -85.3333, -85.3333, -256, 85.3333, -256, 256, -256, 256, -85.3333, 256, 85.3333, 85.3333, 85.3333)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -85.3333, -85.3333, -256, 85.3333, -256, 85.3333, -85.3333, 256, -85.3333, 256, 85.3333, 85.3333, 85.3333, 85.3333, 256, -85.3333, 256)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -85.3333, 256, -85.3333, 256, 85.3333, 85.3333, 85.3333, 85.3333, 256, -85.3333, 256, -85.3333, 85.3333, -256, 85.3333, -256, -85.3333, -85.3333, -85.3333, -85.3333, -256, 85.3333, -256)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -85.3333, -85.3333, -256, -85.3333, -256, 85.3333, -85.3333, 85.3333, -85.3333, 256, 85.3333, 256)
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, 256, -85.3333, 85.3333, -256, 85.3333, -256, -85.3333, -256, -256, 85.3333, -256, 85.3333, -85.3333, 256, -85.3333, 256, 256)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(256, 85.3333, 85.3333, 85.3333, 85.3333, 256, -85.3333, 256, -256, 256, -256, -85.3333, -85.3333, -85.3333, -85.3333, -256, 256, -256)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-85.3333, -85.3333, -85.3333, -256, 85.3333, -256, 85.3333, -85.3333, 256, -85.3333, 256, 85.3333, -85.3333, 85.3333)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, 85.3333, 256, 85.3333, 256, -85.3333, 85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -85.3333, -85.3333, -256, -85.3333, -256, 85.3333)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(85.3333, -85.3333, 85.3333, -256, -85.3333, -256, -85.3333, -85.3333, -256, -85.3333, -256, 85.3333, 85.3333, 85.3333)

[sub_resource type="TileSet" id="TileSet_4pqbp"]
tile_size = Vector2i(512, 512)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 3
physics_layer_0/physics_material = SubResource("PhysicsMaterial_o14dv")
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Platform"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/1 = SubResource("TileSetAtlasSource_mrfpk")

[sub_resource type="AtlasTexture" id="AtlasTexture_mrfpk"]
atlas = ExtResource("2_u7lva")
region = Rect2(50, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pqbp"]
atlas = ExtResource("2_u7lva")
region = Rect2(100, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gih0s"]
atlas = ExtResource("2_u7lva")
region = Rect2(150, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_k33u3"]
atlas = ExtResource("2_u7lva")
region = Rect2(200, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrjdf"]
atlas = ExtResource("2_u7lva")
region = Rect2(250, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqme5"]
atlas = ExtResource("2_u7lva")
region = Rect2(300, 37, 50, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_jewm6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrfpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pqbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gih0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k33u3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrjdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqme5")
}],
"loop": true,
"name": &"default",
"speed": 11.0
}]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_o14dv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -80.0
offset_right = 78.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Play" type="Button" parent="CanvasLayer/Control/BoxContainer/VBoxContainer"]
texture_filter = 2
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_u7lva")
theme_override_font_sizes/font_size = 60
text = "Play"

[node name="Restart" type="Button" parent="CanvasLayer/Control/BoxContainer/VBoxContainer"]
texture_filter = 2
layout_mode = 2
theme = ExtResource("3_u7lva")
theme_override_font_sizes/font_size = 60
text = "Restart"

[node name="Quit" type="Button" parent="CanvasLayer/Control/BoxContainer/VBoxContainer"]
texture_filter = 2
layout_mode = 2
theme = ExtResource("3_u7lva")
theme_override_font_sizes/font_size = 60
text = "Quit"

[node name="ParallaxBackground" parent="." instance=ExtResource("1_5wsvm")]
unique_name_in_owner = true
follow_viewport_enabled = true

[node name="Parallax2D" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 1
motion_mirroring = Vector2(1920, 0)

[node name="TileMapLayer" type="TileMapLayer" parent="ParallaxBackground/Parallax2D"]
scale = Vector2(0.125, 0.125)
tile_map_data = PackedByteArray("AAAAAAwAAQABAAEAAAAAAA0AAQABAAEAAAAAAA4AAQABAAEAAAABAAwAAQABAAEAAAABAA0AAQABAAEAAAABAA4AAQABAAEAAAACAAwAAQABAAEAAAACAA0AAQABAAEAAAACAA4AAQABAAEAAAADAAwAAQABAAEAAAADAA0AAQABAAEAAAADAA4AAQABAAEAAAAEAAwAAQABAAEAAAAEAA0AAQABAAEAAAAEAA4AAQABAAEAAAAFAAwAAQABAAEAAAAFAA0AAQABAAEAAAAFAA4AAQABAAEAAAAGAAwAAQABAAEAAAAGAA0AAQABAAEAAAAGAA4AAQABAAEAAAAHAAwAAQABAAEAAAAHAA0AAQABAAEAAAAHAA4AAQABAAEAAAAIAAwAAQABAAEAAAAIAA0AAQABAAEAAAAIAA4AAQABAAEAAAAJAAwAAQABAAEAAAAJAA0AAQABAAEAAAAJAA4AAQABAAEAAAAKAAwAAQABAAEAAAAKAA0AAQABAAEAAAAKAA4AAQABAAEAAAALAAwAAQABAAEAAAALAA0AAQABAAEAAAALAA4AAQABAAEAAAAMAAwAAQABAAEAAAAMAA0AAQABAAEAAAAMAA4AAQABAAEAAAANAAwAAQABAAEAAAANAA0AAQABAAEAAAANAA4AAQABAAEAAAAOAAwAAQABAAEAAAAOAA0AAQABAAEAAAAOAA4AAQABAAEAAAAPAAwAAQABAAEAAAAPAA0AAQABAAEAAAAPAA4AAQABAAEAAAAQAAwAAQABAAEAAAAQAA0AAQABAAEAAAAQAA4AAQABAAEAAAARAAwAAQABAAEAAAARAA0AAQABAAEAAAARAA4AAQABAAEAAAASAAwAAQABAAEAAAASAA0AAQABAAEAAAASAA4AAQABAAEAAAATAAwAAQABAAEAAAATAA0AAQABAAEAAAATAA4AAQABAAEAAAAUAAwAAQABAAEAAAAUAA0AAQABAAEAAAAUAA4AAQABAAEAAAAVAAwAAQABAAEAAAAVAA0AAQABAAEAAAAVAA4AAQABAAEAAAAWAAwAAQABAAEAAAAWAA0AAQABAAEAAAAWAA4AAQABAAEAAAAXAAwAAQABAAEAAAAXAA0AAQABAAEAAAAXAA4AAQABAAEAAAAYAAwAAQABAAEAAAAYAA0AAQABAAEAAAAYAA4AAQABAAEAAAAZAAwAAQABAAEAAAAZAA0AAQABAAEAAAAZAA4AAQABAAEAAAAaAAwAAQABAAEAAAAaAA0AAQABAAEAAAAaAA4AAQABAAEAAAAbAAwAAQABAAEAAAAbAA0AAQABAAEAAAAbAA4AAQABAAEAAAAcAAwAAQABAAEAAAAcAA0AAQABAAEAAAAcAA4AAQABAAEAAAAdAAwAAQABAAEAAAAdAA0AAQABAAEAAAAdAA4AAQABAAEAAAAAAAoAAQABAAAAAAAAAAsAAQABAAEAAAABAAoAAQABAAAAAAABAAsAAQABAAEAAAACAAoAAQABAAAAAAACAAsAAQABAAEAAAADAAoAAQABAAAAAAADAAsAAQABAAEAAAAEAAoAAQABAAAAAAAEAAsAAQABAAEAAAAFAAoAAQABAAAAAAAFAAsAAQABAAEAAAAGAAoAAQABAAAAAAAGAAsAAQABAAEAAAAHAAoAAQABAAAAAAAHAAsAAQABAAEAAAAIAAoAAQABAAAAAAAIAAsAAQABAAEAAAAJAAoAAQABAAAAAAAJAAsAAQABAAEAAAAKAAoAAQABAAAAAAAKAAsAAQABAAEAAAALAAoAAQABAAAAAAALAAsAAQABAAEAAAAMAAoAAQABAAAAAAAMAAsAAQABAAEAAAANAAoAAQABAAAAAAANAAsAAQABAAEAAAAOAAoAAQABAAAAAAAOAAsAAQABAAEAAAAPAAoAAQABAAAAAAAPAAsAAQABAAEAAAAQAAoAAQABAAAAAAAQAAsAAQABAAEAAAARAAoAAQABAAAAAAARAAsAAQABAAEAAAASAAoAAQABAAAAAAASAAsAAQABAAEAAAATAAoAAQABAAAAAAATAAsAAQABAAEAAAAUAAoAAQABAAAAAAAUAAsAAQABAAEAAAAVAAoAAQABAAAAAAAVAAsAAQABAAEAAAAWAAoAAQABAAAAAAAWAAsAAQABAAEAAAAXAAoAAQABAAAAAAAXAAsAAQABAAEAAAAYAAoAAQABAAAAAAAYAAsAAQABAAEAAAAZAAoAAQABAAAAAAAZAAsAAQABAAEAAAAaAAoAAQABAAAAAAAaAAsAAQABAAEAAAAbAAoAAQABAAAAAAAbAAsAAQABAAEAAAAcAAoAAQABAAAAAAAcAAsAAQABAAEAAAAdAAoAAQABAAAAAAAdAAsAAQABAAEAAAAAAA8AAQABAAEAAAAAABAAAQABAAEAAAABAA8AAQABAAEAAAABABAAAQABAAEAAAACAA8AAQABAAEAAAACABAAAQABAAEAAAADAA8AAQABAAEAAAADABAAAQABAAEAAAAEAA8AAQABAAEAAAAEABAAAQABAAEAAAAFAA8AAQABAAEAAAAFABAAAQABAAEAAAAGAA8AAQABAAEAAAAGABAAAQABAAEAAAAHAA8AAQABAAEAAAAHABAAAQABAAEAAAAIAA8AAQABAAEAAAAIABAAAQABAAEAAAAJAA8AAQABAAEAAAAJABAAAQABAAEAAAAKAA8AAQABAAEAAAAKABAAAQABAAEAAAALAA8AAQABAAEAAAALABAAAQABAAEAAAAMAA8AAQABAAEAAAAMABAAAQABAAEAAAANAA8AAQABAAEAAAANABAAAQABAAEAAAAOAA8AAQABAAEAAAAOABAAAQABAAEAAAAPAA8AAQABAAEAAAAPABAAAQABAAEAAAAQAA8AAQABAAEAAAAQABAAAQABAAEAAAARAA8AAQABAAEAAAARABAAAQABAAEAAAASAA8AAQABAAEAAAASABAAAQABAAEAAAATAA8AAQABAAEAAAATABAAAQABAAEAAAAUAA8AAQABAAEAAAAUABAAAQABAAEAAAAVAA8AAQABAAEAAAAVABAAAQABAAEAAAAWAA8AAQABAAEAAAAWABAAAQABAAEAAAAXAA8AAQABAAEAAAAXABAAAQABAAEAAAAYAA8AAQABAAEAAAAYABAAAQABAAEAAAAZAA8AAQABAAEAAAAZABAAAQABAAEAAAAaAA8AAQABAAEAAAAaABAAAQABAAEAAAAbAA8AAQABAAEAAAAbABAAAQABAAEAAAAcAA8AAQABAAEAAAAcABAAAQABAAEAAAAdAA8AAQABAAEAAAAdABAAAQABAAEAAAA=")
tile_set = SubResource("TileSet_4pqbp")

[node name="TileMapLayer2" type="TileMapLayer" parent="ParallaxBackground/Parallax2D"]
scale = Vector2(0.125, 0.125)
tile_map_data = PackedByteArray("AAAAAAIAAQABAAEAAAAAAAMAAQABAAEAAAAAAAQAAQABAAEAAAAAAAUAAQABAAEAAAAAAAYAAQABAAIAAAABAAIAAQABAAEAAAABAAMAAQABAAEAAAABAAQAAQABAAEAAAABAAUAAQABAAEAAAABAAYAAQABAAIAAAACAAIAAQABAAEAAAACAAMAAQABAAEAAAACAAQAAQABAAEAAAACAAUAAQABAAEAAAACAAYAAQABAAIAAAADAAIAAQABAAEAAAADAAMAAQABAAEAAAADAAQAAQABAAEAAAADAAUAAQABAAEAAAADAAYAAQABAAIAAAAEAAIAAQABAAEAAAAEAAMAAQABAAEAAAAEAAQAAQABAAEAAAAEAAUAAQABAAEAAAAEAAYAAQABAAIAAAAFAAIAAQABAAEAAAAFAAMAAQABAAEAAAAFAAQAAQABAAEAAAAFAAUAAQABAAEAAAAFAAYAAQABAAIAAAAGAAIAAQABAAEAAAAGAAMAAQABAAEAAAAGAAQAAQABAAEAAAAGAAUAAQABAAEAAAAGAAYAAQABAAIAAAAHAAIAAQABAAEAAAAHAAMAAQABAAEAAAAHAAQAAQABAAEAAAAHAAUAAQABAAEAAAAHAAYAAQABAAIAAAAIAAIAAQABAAEAAAAIAAMAAQABAAEAAAAIAAQAAQABAAEAAAAIAAUAAQABAAEAAAAIAAYAAQABAAIAAAAJAAIAAQABAAEAAAAJAAMAAQABAAEAAAAJAAQAAQABAAEAAAAJAAUAAQABAAEAAAAJAAYAAQABAAIAAAAKAAIAAQABAAEAAAAKAAMAAQABAAEAAAAKAAQAAQABAAEAAAAKAAUAAQABAAEAAAAKAAYAAQABAAIAAAALAAIAAQABAAEAAAALAAMAAQABAAEAAAALAAQAAQABAAEAAAALAAUAAQABAAEAAAALAAYAAQABAAIAAAAMAAIAAQABAAEAAAAMAAMAAQABAAEAAAAMAAQAAQABAAEAAAAMAAUAAQABAAEAAAAMAAYAAQABAAIAAAANAAIAAQABAAEAAAANAAMAAQABAAEAAAANAAQAAQABAAEAAAANAAUAAQABAAEAAAANAAYAAQABAAIAAAAOAAIAAQABAAEAAAAOAAMAAQABAAEAAAAOAAQAAQABAAEAAAAOAAUAAQABAAEAAAAOAAYAAQABAAIAAAAPAAIAAQABAAEAAAAPAAMAAQABAAEAAAAPAAQAAQABAAEAAAAPAAUAAQABAAEAAAAPAAYAAQABAAIAAAAQAAIAAQABAAEAAAAQAAMAAQABAAEAAAAQAAQAAQABAAEAAAAQAAUAAQABAAEAAAAQAAYAAQABAAIAAAARAAIAAQABAAEAAAARAAMAAQABAAEAAAARAAQAAQABAAEAAAARAAUAAQABAAEAAAARAAYAAQABAAIAAAASAAIAAQABAAEAAAASAAMAAQABAAEAAAASAAQAAQABAAEAAAASAAUAAQABAAEAAAASAAYAAQABAAIAAAATAAIAAQABAAEAAAATAAMAAQABAAEAAAATAAQAAQABAAEAAAATAAUAAQABAAEAAAATAAYAAQABAAIAAAAUAAIAAQABAAEAAAAUAAMAAQABAAEAAAAUAAQAAQABAAEAAAAUAAUAAQABAAEAAAAUAAYAAQABAAIAAAAVAAIAAQABAAEAAAAVAAMAAQABAAEAAAAVAAQAAQABAAEAAAAVAAUAAQABAAEAAAAVAAYAAQABAAIAAAAWAAIAAQABAAEAAAAWAAMAAQABAAEAAAAWAAQAAQABAAEAAAAWAAUAAQABAAEAAAAWAAYAAQABAAIAAAAXAAIAAQABAAEAAAAXAAMAAQABAAEAAAAXAAQAAQABAAEAAAAXAAUAAQABAAEAAAAXAAYAAQABAAIAAAAYAAIAAQABAAEAAAAYAAMAAQABAAEAAAAYAAQAAQABAAEAAAAYAAUAAQABAAEAAAAYAAYAAQABAAIAAAAZAAIAAQABAAEAAAAZAAMAAQABAAEAAAAZAAQAAQABAAEAAAAZAAUAAQABAAEAAAAZAAYAAQABAAIAAAAaAAIAAQABAAEAAAAaAAMAAQABAAEAAAAaAAQAAQABAAEAAAAaAAUAAQABAAEAAAAaAAYAAQABAAIAAAAbAAIAAQABAAEAAAAbAAMAAQABAAEAAAAbAAQAAQABAAEAAAAbAAUAAQABAAEAAAAbAAYAAQABAAIAAAAcAAIAAQABAAEAAAAcAAMAAQABAAEAAAAcAAQAAQABAAEAAAAcAAUAAQABAAEAAAAcAAYAAQABAAIAAAAdAAIAAQABAAEAAAAdAAMAAQABAAEAAAAdAAQAAQABAAEAAAAdAAUAAQABAAEAAAAdAAYAAQABAAIAAAAAAAAAAQABAAEAAAAAAAEAAQABAAEAAAABAAAAAQABAAEAAAABAAEAAQABAAEAAAACAAAAAQABAAEAAAACAAEAAQABAAEAAAADAAAAAQABAAEAAAADAAEAAQABAAEAAAAEAAAAAQABAAEAAAAEAAEAAQABAAEAAAAFAAAAAQABAAEAAAAFAAEAAQABAAEAAAAGAAAAAQABAAEAAAAGAAEAAQABAAEAAAAHAAAAAQABAAEAAAAHAAEAAQABAAEAAAAIAAAAAQABAAEAAAAIAAEAAQABAAEAAAAJAAAAAQABAAEAAAAJAAEAAQABAAEAAAAKAAAAAQABAAEAAAAKAAEAAQABAAEAAAALAAAAAQABAAEAAAALAAEAAQABAAEAAAAMAAAAAQABAAEAAAAMAAEAAQABAAEAAAANAAAAAQABAAEAAAANAAEAAQABAAEAAAAOAAAAAQABAAEAAAAOAAEAAQABAAEAAAAPAAAAAQABAAEAAAAPAAEAAQABAAEAAAAQAAAAAQABAAEAAAAQAAEAAQABAAEAAAARAAAAAQABAAEAAAARAAEAAQABAAEAAAASAAAAAQABAAEAAAASAAEAAQABAAEAAAATAAAAAQABAAEAAAATAAEAAQABAAEAAAAUAAAAAQABAAEAAAAUAAEAAQABAAEAAAAVAAAAAQABAAEAAAAVAAEAAQABAAEAAAAWAAAAAQABAAEAAAAWAAEAAQABAAEAAAAXAAAAAQABAAEAAAAXAAEAAQABAAEAAAAYAAAAAQABAAEAAAAYAAEAAQABAAEAAAAZAAAAAQABAAEAAAAZAAEAAQABAAEAAAAaAAAAAQABAAEAAAAaAAEAAQABAAEAAAAbAAAAAQABAAEAAAAbAAEAAQABAAEAAAAcAAAAAQABAAEAAAAcAAEAAQABAAEAAAAdAAAAAQABAAEAAAAdAAEAAQABAAEAAAA=")
tile_set = SubResource("TileSet_4pqbp")

[node name="Player" type="AnimatedSprite2D" parent="ParallaxBackground"]
unique_name_in_owner = true
position = Vector2(150, 590)
scale = Vector2(3.7, 3.7)
sprite_frames = SubResource("SpriteFrames_jewm6")
frame_progress = 0.33110622

[connection signal="pressed" from="CanvasLayer/Control/BoxContainer/VBoxContainer/Play" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/BoxContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/BoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
